<resources>
    <string name="app_name">Caso1Final</string>
    <string name="StrUsername" />
    <string name="StrPassword">Password</string>
    <string name="StrUsernames">Username</string>
    <string name="StrCedula">Cedula</string>
    <string name="StrNombre">Nombre</string>
    <string name="StrContraseña">Contraseña</string>
    <string name="StrRepetirContraseña">Repetir Contraseña</string>
    <string name="StrCelular">Celular</string>
    <string name="StrDireccion">Direccion</string>
    <string name="StrEmail">Email</string>
    <string name="title_activity_perfil_acrivity">PerfilAcrivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="StrContraseniaAn">Contraseña Antigua</string>
    <string name="StrContraseniaNueva">Contraseña Nueva</string>
    <string name="StrContraseniaRepetidaNueva">Repetir Contraseña Nueva</string>
    <string name="catalogo_vehiculos">Catalogo Vehiculos</string>
    <string name="strFecha">Fecha</string>
    <string name="StrDescripcon">Descripcion</string>
    <string name="StrMisVehiculos">Mis Vehiculos</string>
    <string name="StrProblemas">Descripcion De Inconvenientes</string>
</resources>