<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/butRegresarPerfilUsuario"
        android:layout_width="37dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/regular_exo"
        android:text="PERFIL DE USUARIO"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="128dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="79dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/client" />

    <EditText
        android:id="@+id/editTextNombreper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/exo_bold"
        android:hint="@string/StrNombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCedulaper" />

    <EditText
        android:id="@+id/editTextCedulaper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/exo_bold"
        android:hint="@string/StrCedula"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/exo_bold"
        android:hint="@string/StrEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreper" />

    <EditText
        android:id="@+id/editTextcelularper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="phone"
        android:fontFamily="@font/exo_bold"
        android:hint="Celular"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailEdit" />

    <EditText
        android:id="@+id/editTextdireccionper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/exo_bold"
        android:hint="Direccion"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextcelularper" />

    <Button
        android:id="@+id/btnCambiarContraseniaDesdePerfil"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/exo_bold"
        android:text="CAMBIAR CONTRASEÑA"
        android:textColor="#F9FBE7"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextdireccionper" />

    <Button
        android:id="@+id/btnActualizarDatos"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/exo_bold"
        android:text="ACTUALIZAR DATOS"
        android:textColor="#F9FBE7"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCambiarContraseniaDesdePerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>